# nyc-real-estate-predictor

./: .env.example  .gitignore  .trivyignore  CHANGELOG.md  Data_Cleaning_Preparation.ipynb  Data_Cleaning_Processing.ipynb  Data_Cleaning_and_Processing.ipynb  Dockerfile  Feature_Engineering_and_Model_Prep.ipynb  MODEL_CARD.md  Makefile  README.md  README1.md  SECURITY.md  SENIOR_PLAN.md  address_sublocality_map.csv  address_sublocality_map.csv.dvc  addresses.txt  data_Classification.ipynb  docker-compose.yml  full_addresses.txt  geocoding_with_geoapify.ipynb  housing-price-analysis.code-workspace  neighbehood.ipynb  project_goals.txt  pyproject.toml  requirements-dev.txt  requirements-train.txt  requirements.txt  run_training.py
.github/: CODEOWNERS  dependabot.yml
Resources/: .gitignore  NY-House-Dataset-Cleaned-manifest.json  NY-House-Dataset-Cleaned.csv  NY-House-Dataset-Cleaned.manifest.json  NY-House-Dataset.csv.dvc  housing_geocode_extraction.csv  housing_geocode_extraction.csv.dvc
api/: __init__.py  main.py  schemas.py  settings.py
benchmarks/: POSTMORTEMS.md  SCHEMA_MAP.md  SCHEMA_MAP_VERSIONS.json  __init__.py  invariants.py  mapping.py  results.json  run_benchmark.py
notebooks/: 01_data_cleaning.ipynb  02_eda_features.ipynb  03_ml_models.ipynb  04_explainability.ipynb  04_feature_engineering.ipynb  05_geocoding.ipynb
output/: .gitignore  cleaned_house_dataset.csv  cleaned_house_dataset.csv.dvc
src/: __init__.py  config.py
streamlit_app/: app.py
tests/: conftest.py  test_api.py  test_data_cleaner.py  test_drift.py  test_evaluate.py  test_geo.py  (+9 more)
(+32 files in other folders)
