[project]
name = "nyc-price-prediction"
version = "1.0.0"
description = "NYC real estate price zone classification and regression with ML + DL"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
exclude = [".git", ".venv", "__pycache__", "mlruns", "models", "data"]

[tool.ruff.lint]
select = ["F", "E", "W", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["F401"]
"notebooks/**" = ["E402", "F401"]

[tool.pytest.ini_options]
addopts = "-ra --import-mode=importlib"
pythonpath = ["."]
markers = [
    "slow: marks tests as slow (deselect with '-m not slow')",
]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
disallow_untyped_defs = true
warn_return_any = true

[[tool.mypy.overrides]]
module = ["tests.*", "notebooks.*"]
disallow_untyped_defs = false

[tool.coverage.run]
source = ["src"]
omit = [
    "tests/*",
    "notebooks/*",
    "streamlit_app/*",
    "src/models/train_classification.py",
    "src/models/train_regression.py",
    "src/dl/train_dl.py",
    "src/dl/tabular_net.py",
    "src/models/explain.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
show_missing = true
